--- a/doc/man3/EVP_PKEY_CTX_ctrl.pod
+++ b/doc/man3/EVP_PKEY_CTX_ctrl.pod
@@ -281,18 +281,18 @@ to be automatically determined based on the B<PSS> block structure. If this
 macro is not called maximum salt length is used when signing and auto detection
 when verifying is used by default.
 
-The EVP_PKEY_CTX_get_rsa_pss_saltlen() macro gets the RSA PSS salt length
+The EVP_PKEY_CTX_get_rsa_pss_saltlen() function gets the RSA PSS salt length
 for B<ctx>. The padding mode must have been set to B<RSA_PKCS1_PSS_PADDING>.
 
-The EVP_PKEY_CTX_set_rsa_keygen_bits() macro sets the RSA key length for
+The EVP_PKEY_CTX_set_rsa_keygen_bits() function sets the RSA key length for
 RSA key generation to B<bits>. If not specified 1024 bits is used.
 
-The EVP_PKEY_CTX_set_rsa_keygen_pubexp() macro sets the public exponent value
+The EVP_PKEY_CTX_set_rsa_keygen_pubexp() function sets the public exponent value
 for RSA key generation to B<pubexp>. Currently it should be an odd integer. The
 B<pubexp> pointer is used internally by this function so it should not be
 modified or freed after the call. If not specified 65537 is used.
 
-The EVP_PKEY_CTX_set_rsa_keygen_primes() macro sets the number of primes for
+The EVP_PKEY_CTX_set_rsa_keygen_primes() function sets the number of primes for
 RSA key generation to B<primes>. If not specified 2 is used.
 
 The EVP_PKEY_CTX_set_rsa_mgf1_md_name() function sets the MGF1 digest for RSA
