--- a/doc/man3/EVP_PKEY_CTX_set_rsa_pss_keygen_md.pod
+++ b/doc/man3/EVP_PKEY_CTX_set_rsa_pss_keygen_md.pod
@@ -44,7 +44,7 @@ similar to the B<RSA> versions.
 =head2 Key Generation
 
 As with RSA key generation the EVP_PKEY_CTX_set_rsa_keygen_bits()
-and EVP_PKEY_CTX_set_rsa_keygen_pubexp() macros are supported for RSA-PSS:
+and EVP_PKEY_CTX_set_rsa_keygen_pubexp() functions are supported for RSA-PSS:
 they have exactly the same meaning as for the RSA algorithm.
 
 Optional parameter restrictions can be specified when generating a PSS key.
