--- a/doc/man3/OSSL_SERIALIZER.pod
+++ b/doc/man3/OSSL_SERIALIZER.pod
@@ -110,7 +110,8 @@ OSSL_SERIALIZER_number() returns an integer.
 
 =head1 SEE ALSO
 
-L<provider(7)>, L<OSSL_SERIALIZER_CTX(3)>, L<OPENSSL_CTX(3)>
+L<provider(7)>, L<OSSL_SERIALIZER_CTX(3)>, L<OSSL_SERIALIZER_to_bio(3)>,
+L<OPENSSL_CTX(3)>
 
 =head1 HISTORY
 
