s390x assembly pack: accelerate X25519, X448, Ed25519 and Ed448
using PCC and KDSA instructions.

Signed-off-by: Patrick Steuer <patrick.steuer@de.ibm.com>

Reviewed-by: Richard Levitte <levitte@openssl.org>
(Merged from https://github.com/openssl/openssl/pull/10004)

Signed-off-by: Patrick Steuer <patrick.steuer@de.ibm.com>
(cherry picked from commit 56eb364ef5cf93e2658cd45fcffee435b80857b2)
Signed-off-by: Dimitri John Ledkov <xnox@ubuntu.com>

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,10 @@
      on renegotiation.
      [Tomas Mraz]
 
+  *) s390x assembly pack: add hardware-support for P-256, P-384, P-521,
+     X25519, X448, Ed25519 and Ed448.
+     [Patrick Steuer]
+
   *) The Oracle Developer Studio compiler will start reporting deprecated APIs
 
  Changes between 1.1.1f and 1.1.1g [21 Apr 2020]
