--- a/CHANGES
+++ b/CHANGES
@@ -88,6 +88,10 @@
      checksum programs. This aims to preserve backward compatibility.
      [Matt Eaton, Richard Levitte, and Paul Dale]
 
+  *) s390x assembly pack: add hardware-support for P-256, P-384, P-521,
+     X25519, X448, Ed25519 and Ed448.
+     [Patrick Steuer]
+
   *) Print all values for a PKCS#12 attribute with 'openssl pkcs12', not just
      the first value.
      [Jon Spillett]
