Added parameter -win-comp to CMS command line utility
Added parameter -win-comp to CMS command line utility, to support
Windows 10 compatible KARI keyEncryptionAlgorithm ASN.1.

Windows 10 exptects wrapping algorithm parameter to be NULL. On absent
parameter, Windows 10 is not able to decrypt CMS.

Output OpenSSL CMS without -win-comp. Not decryptable on Windows 10:

keyEncryptionAlgorithm:
          algorithm: dhSinglePass-stdDH-sha1kdf-scheme (1.3.133.16.840.63.0.2)
          parameter: SEQUENCE:
    0:d=0  hl=2 l=  11 cons: SEQUENCE
    2:d=1  hl=2 l=   9 prim:  OBJECT            :id-aes128-wrap

Output OpenSSL CMS with win-comp. Decryptable on Windows 10:

keyEncryptionAlgorithm:
          algorithm: dhSinglePass-stdDH-sha1kdf-scheme (1.3.133.16.840.63.0.2)
          parameter: SEQUENCE:
    0:d=0  hl=2 l=  13 cons: SEQUENCE
    2:d=1  hl=2 l=   9 prim:  OBJECT            :id-aes128-wrap
   13:d=1  hl=2 l=   0 prim:  NULL

CLA: trivial

--- a/doc/man1/cms.pod
+++ b/doc/man1/cms.pod
@@ -100,6 +100,7 @@ B<openssl> B<cms>
 [B<-to addr>]
 [B<-from addr>]
 [B<-subject subj>]
+[B<-win-comp>]
 [cert.pem]...
 
 =head1 DESCRIPTION
@@ -502,6 +503,14 @@ B<-verify_ip>, B<-verify_name>, B<-x509_strict>
 
 Set various certificate chain validation options. See the
 L<verify(1)> manual page for details.
+
+=item B<-win-comp>
+
+Set Windows 10 compatible wrapping algorithm for KARI
+recipients. Windows 10 expects wrapping algorithm parameter to be NULL
+on key agreement recipients. Set this option, when Windows recipients
+with ECC certificates can't decrypt CMS messages. Use together with a
+-*-wrap parameter, for example -aes128-wrap or -aes256-wrap.
 
 =back
 
