fixup! Difference between EVP_CipherInit and EVP_CipherInit_ex

--- a/doc/man3/EVP_EncryptInit.pod
+++ b/doc/man3/EVP_EncryptInit.pod
@@ -669,7 +669,7 @@ existing context without allocating and freeing it up on each call.
 
 There are some differences between functions EVP_CipherInit() and
 EVP_CipherInit_ex(), significant in some circumstances. EVP_CipherInit() fills
-the passed context object with zeroes. It means that the flags set for the CTX
+the passed context object with zeros. It means that the flags set for the CTX
 are removed, and it is especially important for the
 B<EVP_CIPHER_CTX_FLAG_WRAP_ALLOW> flag treated specially in
 EVP_CipherInit_ex(). As a consequence, EVP_CipherInit() does not allow
