Better documentation of -www,-WWW,-HTTP flags
Reviewed-by: Tomas Mraz <tmraz@fedoraproject.org>
Reviewed-by: Dmitry Belyavskiy <beldmit@gmail.com>
(Merged from https://github.com/openssl/openssl/pull/10134)

--- a/doc/man1/openssl.pod
+++ b/doc/man1/openssl.pod
@@ -931,6 +931,8 @@ B<sep_multiline>.
 Places spaces round the equal sign, C<=>, character which follows the field
 name.
 
+=back
+
 =head2 TLS Version Options
 
 Several commands use SSL, TLS, or DTLS. By default, the commands use TLS and
