--- a/doc/man7/provider-keyexch.pod
+++ b/doc/man7/provider-keyexch.pod
@@ -29,6 +29,8 @@ provider-keyexch - The keyexch library E<lt>-E<gt> provider functions
                        size_t outlen);
 
  /* Key Exchange parameters */
+ int OP_keyexch_get_params(const OSSL_PARAM params[]);
+ const OSSL_PARAM *OP_keyexch_gettable_params(void);
  int OP_keyexch_set_ctx_params(void *ctx, const OSSL_PARAM params[]);
  const OSSL_PARAM *OP_keyexch_settable_ctx_params(void);
 
@@ -69,6 +71,8 @@ macros in L<openssl-core_numbers.h(7)>, as follows:
  OP_keyexch_set_peer              OSSL_FUNC_KEYEXCH_SET_PEER
  OP_keyexch_derive                OSSL_FUNC_KEYEXCH_DERIVE
 
+ OP_keyexch_get_params            OSSL_FUNC_KEYEXCH_GET_PARAMS
+ OP_keyexch_gettable_params       OSSL_FUNC_KEYEXCH_GETTABLE_PARAMS
  OP_keyexch_set_ctx_params        OSSL_FUNC_KEYEXCH_SET_CTX_PARAMS
  OP_keyexch_settable_ctx_params   OSSL_FUNC_KEYEXCH_SETTABLE_CTX_PARAMS
 
@@ -127,6 +131,9 @@ written to I<*secretlen>.
 
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
 the OP_keyexch_set_params() function.
+
+OP_keyexch_get_params() gets details of the algorithm implementation
+and stores them in I<params>.
 
 OP_keyexch_set_ctx_params() sets key exchange parameters associated with the
 given provider side key exchange context I<ctx> to I<params>.
