Prepare for 1.0.2u release
Reviewed-by: Paul Yang <kaishen.yy@antfin.com>

--- a/CHANGES
+++ b/CHANGES
@@ -7,7 +7,7 @@
  https://github.com/openssl/openssl/commits/ and pick the appropriate
  release branch.
 
- Changes between 1.0.2t and 1.0.2u [xx XXX xxxx]
+ Changes between 1.0.2t and 1.0.2u [20 Dec 2019]
 
   *) Fixed an an overflow bug in the x64_64 Montgomery squaring procedure
      used in exponentiation with 512-bit moduli. No EC algorithms are
