--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
- OpenSSL 1.0.2u-dev
+ OpenSSL 1.0.2u 20 Dec 2019
 
  Copyright (c) 1998-2019 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
